# plugin_loader

./: CMakeLists.txt  dd1st.cpp  main copy.cpp  main.cpp  test.lds
demo/global_symbol_iterpose/: CMakeLists.txt  a1.cpp  a2.cpp  b1.cpp  b2.cpp  main.cpp
demo/test_version/demo1/: CMakeLists.txt  c1.c  c2.c  main.cpp
demo/test_version/demo1/v1/: CMakeLists.txt  b.c  b.lds
demo/test_version/demo1/v2/: b.lds
demo/test_version/demo2/: CMakeLists.txt  libx-1.map  test.cpp
doc/: distribute.md  dynamic_load.md  load_lib.md
environment/: CMakeLists.txt
environment/apple/: CMakeLists.txt  types_for_apple.cpp
environment/include/: types.h
plugin_loader/: plugin_loader.cpp  plugin_loader.h
plugin_manager/: CMakeLists.txt  plugin_manager.cpp  plugin_manager.h
plugins/: CMakeLists.txt
plugins/add/: CMakeLists.txt  add.cpp  add.h
plugins/test_version/: libx-2.map  test2.cpp
